--- a/_posts/2019-12-23-the-us-narrative-today.html
+++ b/_posts/2019-12-23-the-us-narrative-today.html
@@ -741,107 +741,107 @@ stories:
   domain: http://www.willistonherald.com/
   link: https://www.willistonherald.com/national/entertainment/susan-boyle-has-been-single-for-too-long-to-think/image_b92e109a-157b-5d3b-9593-b1b4e26eff40.html
 images:
-- name: pigeons-on-the-ledge-pigeons-on-ledge-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-kand-two.jpg
-- name: hollywood-building-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-clean-view.jpg
-- name: crow-crow-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-kand-two.jpg
-- name: trucksilo-trucksilo-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-aqua.jpg
-- name: nazi-invasion-going-to-dowtown-los-angeles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-going-to-dowtown-los-angeles.jpg
-- name: window-window-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-atari-asteroids.jpg
-- name: downtown-trucksilo-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-smoking-cigarette.jpg
-- name: old-door-lock-old-door-lock-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-deep-connections.jpg
-- name: abe-lincoln-one-plentiful-file-00-00-07-91.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-plentiful-file-00-00-07-91.jpg
-- name: oldhousecars-house-old-cars-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-far-away.jpg
-- name: catacombs-catacombs-china-prop.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-china-prop.jpg
-- name: server-cloud-server-racks-door-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-alien-goggles.jpg
-- name: downtheline-downtheline-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-wols.jpg
-- name: death-valley-death-valley-national-park-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-dark-soul.jpg
-- name: walled-garden-walled-garden-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-crafty-painting.jpg
-- name: berlinwall-DSC-0084-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-dark-rain.jpg
-- name: nyc-flag-nycflag-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-crunch-paper.jpg
-- name: window-window-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-really-hot.jpg
-- name: white-house-lawn-white-house-lawn-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-really-hot.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-gred-mash.jpg
-- name: bf-skinner-walking-water-front-sun.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-walking-water-front-sun.jpg
-- name: old-granary-field-granaryfield-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-dark-dali.jpg
-- name: white-house-lawn-white-house-lawn-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-smooth-ride.jpg
-- name: school-clouds-church-clouds-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-dark-soul.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-post-modern.jpg
-- name: old-granary-field-oldhouse-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-smoking-cigarette.jpg
-- name: oldsmallboat-oldsmallboat-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-colored-circuits.jpg
-- name: supreme-court-supremecourt-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-sunday.jpg
-- name: death-valley-death-valley-national-park-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-aqua.jpg
-- name: copper-circuit-san-francisco-skyline.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-san-francisco-skyline.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-blue-circuit.jpg
-- name: san-francisco-street-view-san-francisco-street-view-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-emily-carr.jpg
-- name: oldhouse-granaryfield-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-dali-three.jpg
-- name: curtain-curtain-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-marcel-duchamp.jpg
-- name: server-cloud-server-racks-door-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-satan-red.jpg
-- name: catacombs-catacombs-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-blue-electricity.jpg
-- name: gypsymosaic-gypsy-eyes-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-deep-connections.jpg
-- name: downtown-los-angeles-downtown-la-plentiful.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-plentiful.JPG
-- name: amusement-park-amusement-park-2-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-kand-two.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-feed-people.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-feed-people.JPG
-- name: old-cabin-oldcabin-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-graham-sutherland.jpg
-- name: downtown-los-angeles-downtown-la-blue-circuit.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-blue-circuit.JPG
-- name: adam-smith-adam-smith-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-feed-people.jpg
-- name: abandonedbuildings_really_hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_really_hot.jpg
-- name: oldcabin-oldcabin-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-rainbow-festival.jpg
-- name: oldtrain-oldtrain-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-blue-circuit.jpg
-- name: crow-crow-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-graham-sutherland.jpg
-- name: paris-paris-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-ww2-dresden.jpg
-- name: beach-rocks-beach-rocks-currents-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-sand-paper.jpg
-- name: bf-skinner-gypsy-house-with-pen.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-gypsy-house-with-pen.jpg
-- name: beach-rocks-beach-rocks-currents-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-gred-mash.jpg
+- name: flower-barbed-wire-flower-barbed-wire-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-kandinsky-bv.jpg
+- name: oldsmallboat-oldsmallboat-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-sand-paper.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-colorful-blocks.jpg
+- name: lincoln-memorial-lincolnmemorial-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-sunday.jpg
+- name: nazi-invasion-highway-granary_36331800650_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-highway-granary_36331800650_o.jpg
+- name: aws-s3-stories-containership-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-containership-blue-circuit.jpg
+- name: containership-containership-blue-circuit-4.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-blue-circuit-4.jpg
+- name: old-cabin-oldcabin-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-purple-pond.jpg
+- name: old-door-lock-old-door-lock-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-dry-skin.jpg
+- name: aws-s3-stories-new-64-185-800-500-0-max-0-1--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-64-185-800-500-0-max-0-1--1.jpg
+- name: dc-statue-dcstatue-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-monet-one.jpg
+- name: stories-capitolbattle-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-capitolbattle-blue-circuit.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-light-dali.jpg
+- name: rain-princess-bridge-over-columbia.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-bridge-over-columbia.jpg
+- name: white-house-lawn-white-house-window-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-crafty-painting.jpg
+- name: old-door-lock-old-door-lock-2-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-blue-granite.jpg
+- name: old-door-lock-old-door-lock-2-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-light-dali.jpg
+- name: aws-s3-square-christianity-under-construction-copper-circuit-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-christianity-under-construction-copper-circuit-square.jpg
+- name: downtown-los-angeles-downtown-la-atari-asteroids.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-atari-asteroids.JPG
+- name: statue-of-liberty-front-view-statueofliberty-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-dark-soul.jpg
+- name: nazi-invasion-IMG_7875.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_7875.jpg
+- name: old-church-oldchurch-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-clean-view.jpg
+- name: rockingchair-face-2-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-face-2-colored-circuits.jpg
+- name: aws-s3-stories-server-racks-clouds-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-server-racks-clouds-clean-view.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-umberto-bocc.jpg
+- name: oldhouse-granaryfield-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-alien-goggles.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-internet-numbers.jpg
+- name: windowmountain-window-mountain-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-dark-rain.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-smooth-ride.jpg
+- name: oldsmallboat-oldsmallboat-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-crafty-painting.jpg
+- name: crow-crow-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-internet-numbers.jpg
+- name: la-muse-city-clouds-waterfront.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-city-clouds-waterfront.jpg
+- name: old-gas-pumps-oldgaspumps-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-alberto-giacometti.jpg
+- name: mistywoods-babyfoot-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-crafty-painting.jpg
+- name: docks-docks-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-matrix.jpg
+- name: aws-s3-stories-fredericksburg-downtown-flag.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-fredericksburg-downtown-flag.jpg
+- name: death-valley-death-valley-national-park-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-hot-spicy.jpg
+- name: store-on-corner-store-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-marcel-duchamp.jpg
+- name: razorcliff-razorcliff-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-really-hot.jpg
+- name: legal-statue-legalstatue-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-matrix.jpg
+- name: wind-mills-windmills-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-dark-dali.jpg
+- name: oldcabin-store-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-monet-one.jpg
+- name: bf-skinner-satellite-with-sunset.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-satellite-with-sunset.jpg
+- name: windowmountain-window-mountain-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-monet-one.jpg
+- name: braceros-domingo-ulloa-capital_36728421355_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-capital_36728421355_o.jpg
+- name: white-house-lawn-white-house-window-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-sand-paper.jpg
+- name: catacombs-catacombs-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-atari-asteroids.jpg
+- name: old-door-lock-old-door-lock-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-emily-carr.jpg
+- name: school-clouds-church-clouds-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-dali-three.jpg
+- name: curtain-curtain-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-atari-missle.jpg
+- name: rain-princess-IMG_7288.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_7288.jpg
 ---
 Tornado A Lesson On Whats Important.&nbsp;Cops, Kids Go Shopping For Christmas.&nbsp;China, South Korea, Japan Meet Over Trade, Regional Disputes.&nbsp;OnPoint Community Credit Union Responds To Sisters Kiwanis Food Bank Funding Shortage.&nbsp;James Reese Sunday Leftovers.&nbsp;Schools Cruel With Lunch Money Threat.&nbsp;East Bernstadt Man Dies Following Shooting Sunday; Four Arrested.&nbsp;Lakers Show Inexperience At Caldwell.&nbsp;
